--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --host matey.io",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "buefy": "^0.7.7",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-google-oauth2": "^1.4.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
