--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "buefy": "^0.7.7",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.4",
     "vue-google-oauth2": "^1.4.0",
+    "vue-material-design-icons": "^3.2.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
