--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "buefy": "^0.7.7",
     "core-js": "^2.6.5",
+    "lodash": "^4.17.14",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-google-oauth2": "^1.4.0",
