--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "serve": "vue-cli-service serve --host matey.io",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "deploy": "npm run build && gcloud app deploy ",
+    "test:e2e": "vue-cli-service test:e2e --url http://matey.io:8080",
     "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e"
+    "test:unit:cov": "vue-cli-service test:unit --coverage"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -22,7 +24,7 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0",
-    "@vue/cli-plugin-e2e-nightwatch": "^3.0.0",
+    "@vue/cli-plugin-e2e-cypress": "^3.9.0",
     "@vue/cli-plugin-eslint": "^3.0.0",
     "@vue/cli-plugin-unit-jest": "^3.0.0",
     "@vue/cli-service": "^3.0.0",
