--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "buefy": "^0.7.7",
+    "bulmaswatch": "^0.7.2",
     "core-js": "^2.6.5",
     "lodash": "^4.17.14",
     "vue": "^2.6.10",
