--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,14 @@ coverage/
 tests/e2e/videos/
 tests/e2e/screenshots/
 
+*.pem
+
 # Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
 
 # Editor directories and files
 .idea
