--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --host matey.io",
+    "serve:local": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "deploy": "npm run build && gcloud app deploy ",
@@ -15,10 +16,11 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "buefy": "^0.7.7",
+    "buefy": "^0.8.2",
     "bulmaswatch": "^0.7.2",
-    "core-js": "^2.6.5",
+    "core-js": "^3.2.1",
     "lodash": "^4.17.14",
+    "v-clipboard": "^2.2.2",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-google-oauth2": "^1.4.0",
@@ -27,21 +29,22 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@kazupon/vue-i18n-loader": "^0.3.0",
+    "@kazupon/vue-i18n-loader": "^0.4.1",
     "@vue/cli-plugin-babel": "^3.0.0",
     "@vue/cli-plugin-e2e-cypress": "^3.9.0",
     "@vue/cli-plugin-eslint": "^3.0.0",
     "@vue/cli-plugin-unit-jest": "^3.0.0",
     "@vue/cli-service": "^3.0.0",
-    "@vue/eslint-config-prettier": "^4.0.1",
+    "@vue/eslint-config-prettier": "^5.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
-    "eslint": "^5.16.0",
+    "babel-jest": "^24.8.0",
+    "eslint": "5",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
     "jest-html-reporter": "^2.5.0",
-    "jest-junit": "^6.4.0",
+    "jest-junit": "^7.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
     "vue-cli-plugin-i18n": "^0.6.0",
