--- a/app.yaml.sample
+++ b/app.yaml.sample
@@ -7,7 +7,9 @@ handlers:
   # Serve all static files with urls ending with a file extension
   - url: /(.*\..+)$
     static_files: dist/\1
+    secure: always
     upload: dist/(.*\..+)$  # catch all handler to index.html
   - url: /.*
     static_files: dist/index.html
+    secure: always
     upload: dist/index.html
