--- a/app.yaml.sample
+++ b/app.yaml.sample
@@ -8,8 +8,20 @@ handlers:
   - url: /(.*\..+)$
     static_files: dist/\1
     secure: always
+    http_headers:
+      Content-Security-Policy: default-src https:; frame-ancestors 'none'
+      Strict-Transport-Security: max-age=63072000
+      X-Content-Type-Options: nosniff
+      X-Frame-Options: DENY
+      X-XSS-Protection: 1; mode=block
     upload: dist/(.*\..+)$  # catch all handler to index.html
   - url: /.*
     static_files: dist/index.html
     secure: always
+    http_headers:
+      Content-Security-Policy: default-src https:; frame-ancestors 'none'
+      Strict-Transport-Security: max-age=63072000
+      X-Content-Type-Options: nosniff
+      X-Frame-Options: DENY
+      X-XSS-Protection: 1; mode=block
     upload: dist/index.html
