--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "axios": "^0.19.0",
     "buefy": "^0.8.2",
     "bulmaswatch": "^0.7.2",
+    "chart.js": "^2.8.0",
     "core-js": "^3.2.1",
     "lodash": "^4.17.14",
     "v-clipboard": "^2.2.2",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
+    "vue-chartjs": "^3.4.2",
     "vue-google-oauth2": "^1.4.0",
     "vue-i18n": "^8.12.0",
     "vue-router": "^3.0.3",
