--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "buefy": "^0.8.3",
     "bulmaswatch": "^0.7.5",
     "chart.js": "^2.8.0",
+    "chartjs-plugin-colorschemes": "^0.4.0",
     "core-js": "^3.2.1",
     "lodash": "^4.17.15",
     "v-clipboard": "^2.2.2",
