--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:unit:cov": "vue-cli-service test:unit --coverage"
   },
   "dependencies": {
+    "apexcharts": "^3.10.1",
     "axios": "^0.19.0",
     "buefy": "^0.8.3",
     "bulmaswatch": "^0.7.5",
@@ -22,12 +23,12 @@
     "lodash": "^4.17.15",
     "v-clipboard": "^2.2.2",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.5.1",
     "vue-axios": "^2.1.4",
     "vue-google-oauth2": "^1.4.0",
     "vue-i18n": "^8.14.1",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.1",
-    "vue-apexcharts": "latest"
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.4.1",
